<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.denzcoskun.imageslider.ImageSlider
        android:id="@+id/image_slider_1"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:iss_auto_cycle="true"
        app:iss_period="1000"
        app:iss_delay="0"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/topGainers_textView"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/top_gainers" />

        <TextView
            android:id="@+id/topLosers_textView"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/top_losers" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pair_textView"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/pair" />

        <TextView
            android:id="@+id/price_textView"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/price" />

        <TextView
            android:id="@+id/change24_textView"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/_24h_change" />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recylerview_home"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>
