<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".fragments.ProfileFragment">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="238dp"
        android:background="@color/cardview_shadow_start_color">

        <ImageView
            android:id="@+id/ic_edit_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_edit_img" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ic_profile_img"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_profile_img"
            android:text="@string/select_photo"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/name_surname_update_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ic_profile_img"
            android:layout_centerHorizontal="true"
            android:background="@drawable/upload_background"
            android:inputType="text"
            android:layout_margin="10dp"
            android:padding="8dp"
            android:text="@string/name_surname"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp">

        <EditText
            android:id="@+id/email_update_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginTop="8dp"
            android:autofillHints="@string/email"
            android:background="@drawable/et_enabled"
            android:enabled="true"
            android:inputType="textEmailAddress"
            android:padding="8dp" />


        <EditText
            android:id="@+id/password_update_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/et_enabled"
            android:enabled="false"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="8dp" />

        <EditText
            android:id="@+id/password2_update_editText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:background="@drawable/et_enabled"
            android:hint="@string/password_again"
            android:inputType="textPassword"
            android:padding="8dp" />

        <Button
            android:id="@+id/profile_update_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_button"
            android:text="@string/update"
            android:textColor="@android:color/white" />

    </LinearLayout>


</LinearLayout>